--- a/Projekt_DVD_Maksimir/O_nama.html
+++ b/Projekt_DVD_Maksimir/O_nama.html
@@ -54,9 +54,9 @@
 		
 		<p>DVD Maksimir dobrovoljna je, stručna, humanitarna i nestranačka udruga od posebnog interesa za Republiku Hrvatsku glede zaštite od požara i vatrogastva. DVD Maksimir je neprofitna humanitarna udruga koja je osnovana s ciljem sudjelovanja u akcijama gašenja požara i zaštite od požara te akcijama spašavanja osoba i imovine.</p>
 		<h4>Predsjedništvo društva:</h4>
-		<p>Predsjednik: Franjo Kelbas <br> Dopredsjednik: Mato Antonić <br> Tajnik: Tomislav Kiriđija</p>
+		<p>Predsjednik: Božo Krnjak <br> Dopredsjednik: Mato Antonić <br> Tajnik: Mato Samardžić</p>
         <h4>Zapovjedništvo:</h4>
-        <p>Zapovjednik: Božo Krnjak <br> Zamjenik zapovjednika: Damir Eri <br> Spremištar: Vedran Dasović <br> Savjetnik za operativne poslove i tehniku: Goran Rehaček <br> Savjetnik zapovjednika za logistiku i posebne poslove: Danijel Tabak <br> Voditelj vatrogasnih dežurstava: Gordan Horvat <br> Voditelj stručnih predavanja: Katarina Pavlić</p>
+        <p>Zapovjednik: Nenad Flajnik <br> Zamjenik zapovjednika: Kristijan Jagić <br> Spremištar: Vedran Dasović <br> Savjetnik za operativne poslove i tehniku: Goran Rehaček <br> Savjetnik zapovjednika za logistiku i posebne poslove: Danijel Tabak <br> Voditelj vatrogasnih dežurstava: Gordan Horvat <br> Voditelj stručnih predavanja: Katarina Pavlić</p>
         <h4>Informacije o društvu:</h4>
         <p>Naziv: DVD Maksimir <br> Adresa: Maksimirska cesta 51 <br> Mjesto: Zagreb 10000 <br> Tel/fax: 01/2312016 <br> MB:3257444 <br> OIB:52361209406 <br>IBAN: HR1523600001101603977</p>
         <br>
